syntax = "proto3";
package common.v1;

message Pagination {
  int32 page = 1;
  int32 page_size = 2;
}

message PaginationResult {
  int32 total_count = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
}

message Money {
  int64 amount_cents = 1;
  string currency = 2;  // ISO 4217 e.g. "EUR"
}
